kubernetes/service_awslbcontroller.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: eks-lab
spec:
  selector:
    app: nginx

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
